[workspace]
resolver = "2"

members = [
  'contracts/*',
  'packages/*',
]

[workspace.dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = {version = "1.5.4"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
