[workspace]
resolver = "2"

members = [
  'contracts/*',
  'packages/*',
]

[workspace.dependencies]
cosmwasm-schema = "2.1"
cosmwasm-std = {version = "2.1"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
