[tool.poetry]
authors = ["Supanat Potiwarakorn <supanat.ptk@gmail.com>"]
description = ""
name = "simulation"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
streamlit = "^1.28.0"
pandas = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
