[package]
authors = ["Supanat Potiwarakorn <supanat.ptk@gmail.com>"]
edition = "2021"
name = "transmuter"
version = "4.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# skip integration test for cases like running `cargo mutants`
skip-integration-test = []

# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true, features = ["cosmwasm_1_1"]}
cosmwasm-storage = "1.3.1"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
itertools = "0.13.0"
osmosis-std = "0.26.0"
schemars = "0.8.12"
serde = {version = "1.0.183", default-features = false, features = ["derive"]}
sylvia = "1.2.1"
thiserror = {version = "1.0.44"}
transmuter_math = {version = "1.0.0", path = "../../packages/transmuter_math"}

[dev-dependencies]
itertools = "0.13.0"
osmosis-test-tube = "26.0.1"
rstest = "0.23.0"

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = [
  'cfg(tarpaulin)',
  'cfg(tarpaulin_include)',
]}
